# 2D_plot

./: README.md
01/: .directory  .gitignore  CMakeLists.txt
01/include/: signal.h
01/src/: main.cpp  mainwindow.cpp
01/ui/: mainwindow.ui
2d/: install.sh
2d/include/: mainwindow.h
2d/ui/: mainwindow.ui
